--- a/app/css/admin-style.css
+++ b/app/css/admin-style.css
@@ -154,3 +154,43 @@ input[type="submit"]:hover {
     padding: 10px 0;
     border-radius: 0 0 4px 4px;
 }
+
+.flex-apart{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: white;
+    width: 100%;
+}
+
+.max-width{
+    border: none;
+    background-color: #3ca9e2;
+    color: white;
+    height: 60px;
+    width: 110px;
+    border-radius: 4px;
+    font-weight: bold;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    font-size: 18px;
+    position: relative;
+    text-align: center;
+}
+
+.max-width:hover{
+    background-color: #329dd5;
+    -webkit-transition: all 0.2s ease;
+    transition: all 0.2s ease
+}
+
+header{
+    background-color: white;
+    border-bottom: lightgrey;
+    box-shadow: 0px 10px 15px 5px rgba(0,0,0,0.3);
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
