--- a/app/css/admin-style.css
+++ b/app/css/admin-style.css
@@ -12,6 +12,7 @@ h2 {
 
 p {
     position: relative;
+    font-size: 20px;
 }
 
 a,
@@ -55,7 +56,6 @@ input {
     outline: none;
     height: 60px;
     line-height: 60px;
-    border-radius: 4px;
 }
 
 input[type="text"],
@@ -193,4 +193,96 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+table{
+    width: 100%;
+    margin: 30px;
+    padding-right: 60px;
+}
+
+.middle{
+    text-align: center;
+}
+
+tr:nth-child(odd){
+    background-color:#ebebeb;
+}
+
+tr:first-child{
+    background-color:#d3d3d3;
+}
+
+tr:hover{
+    background-color:#d3d3d3;
+}
+
+.contained{
+    background-color: #fff;
+    width: 50%;
+    margin: 30px auto;
+    text-align: center;
+    padding: 20px 0 0 0;
+    border-radius: 4px;
+    box-shadow: 0px 30px 50px 0px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contained form{
+    width: 70%;
+}
+
+.row{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+select{
+    width: 60%;
+    height: 40px;
+    font-family: bold;
+}
+
+.row input{
+    max-width: 60%;
+    height: 40px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+.filter{
+    background-color: #fff;
+    width: 50%;
+    margin: 30px auto;
+    text-align: center;
+    padding: 20px 0 0 0;
+    border-radius: 4px;
+    box-shadow: 0px 30px 50px 0px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+}
+
+.filter form{
+    width: 70%;
+}
+
+.filter-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
 }
